--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="/lib/jquery.js"></script>
-    <script src="/lib/underscore.js"></script>
-    <script src="/lib/backbone.js"></script>
-    <script src="/lib/handlebars.js"></script>
+    <link rel="stylesheet" type="text/css" href="/dist/style.min.css">
+    <script src="/dist/jquery.min.js"></script>
+    <script src="/dist/underscore.min.js"></script>
+    <script src="/dist/backbone.min.js"></script>
+    <script src="/dist/handlebars.min.js"></script>
 
   </head>
 
